fix spacing

--- a/static/css/abundantlysocial.css
+++ b/static/css/abundantlysocial.css
@@ -1614,7 +1614,7 @@ figcaption {
 }
 
 .page-section.blog {
-  padding-top: 50px;
+  margin-top: 50px;
 }
 
 .blog-hero-banner {
